@@ -24,16 +24,15 @@
  */
 package com.iluwatar.roleobject;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.Optional;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-/**
- * Possible roles.
- */
+/** Possible roles. */
 public enum Role {
-
-  Borrower(BorrowerRole.class), Investor(InvestorRole.class);
+  BORROWER(BorrowerRole.class),
+  INVESTOR(InvestorRole.class);
 
   private final Class<? extends CustomerRole> typeCst;
 
@@ -43,18 +42,18 @@ public enum Role {
 
   private static final Logger logger = LoggerFactory.getLogger(Role.class);
 
-  /**
-   * Get instance.
-   */
+  /** Get instance. */
   @SuppressWarnings("unchecked")
   public <T extends CustomerRole> Optional<T> instance() {
     var typeCst = this.typeCst;
     try {
-      return (Optional<T>) Optional.of(typeCst.newInstance());
-    } catch (InstantiationException | IllegalAccessException e) {
+      return (Optional<T>) Optional.of(typeCst.getDeclaredConstructor().newInstance());
+    } catch (InstantiationException
+        | IllegalAccessException
+        | NoSuchMethodException
+        | InvocationTargetException e) {
       logger.error("error creating an object", e);
     }
     return Optional.empty();
   }
-
 }
